// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Default 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <nav
      className="wrapper"
    >
      <div
        className="toggler"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M4 18h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zm0-5h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1z"
          />
        </svg>
      </div>
      <div
        className="links "
      >
        <span
          className="linkItem"
        >
          <a
            href="/timesheets"
            onClick={[Function]}
          >
            Timesheets
          </a>
          <span
            className="activeLine"
          />
        </span>
        <span
          className="linkItem"
        >
          <a
            href="/expenses"
            onClick={[Function]}
          >
            Expenses
          </a>
        </span>
        <span
          className="linkItem"
        >
          <a
            href="/management"
            onClick={[Function]}
          >
            Management
          </a>
        </span>
      </div>
      <div
        className="right"
      >
        <img
          alt=""
          className="alert"
          src=""
        />
        <div
          className="profile"
        >
          <img
            alt=""
            className="avatar"
            src=""
          />
          <div
            className="info"
          >
            <p
              className="name"
            >
              Adam Fisherman
            </p>
            <p
              className="level"
            >
               Administrator
            </p>
          </div>
          <button
            className="arrow"
            type="button"
          >
            Open Profile
          </button>
        </div>
      </div>
    </nav>
  </header>
  <div>
    Timesheets
  </div>
</div>
`;

exports[`Storyshots NavigationBar Expenses 1`] = `
<nav
  className="wrapper"
>
  <div
    className="toggler"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      onClick={[Function]}
      viewBox="0 0 24 24"
    >
      <path
        d="M4 18h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zm0-5h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1z"
      />
    </svg>
  </div>
  <div
    className="links "
  >
    <span
      className="linkItem"
    >
      <a
        href="/timesheets"
        onClick={[Function]}
      >
        Timesheets
      </a>
    </span>
    <span
      className="linkItem"
    >
      <a
        href="/expenses"
        onClick={[Function]}
      >
        Expenses
      </a>
      <span
        className="activeLine"
      />
    </span>
    <span
      className="linkItem"
    >
      <a
        href="/management"
        onClick={[Function]}
      >
        Management
      </a>
    </span>
  </div>
  <div
    className="right"
  >
    <img
      alt=""
      className="alert"
      src=""
    />
    <div
      className="profile"
    >
      <img
        alt=""
        className="avatar"
        src=""
      />
      <div
        className="info"
      >
        <p
          className="name"
        >
          Adam Fisherman
        </p>
        <p
          className="level"
        >
           Administrator
        </p>
      </div>
      <button
        className="arrow"
        type="button"
      >
        Open Profile
      </button>
    </div>
  </div>
</nav>
`;

exports[`Storyshots NavigationBar Management 1`] = `
<nav
  className="wrapper"
>
  <div
    className="toggler"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      onClick={[Function]}
      viewBox="0 0 24 24"
    >
      <path
        d="M4 18h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zm0-5h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1z"
      />
    </svg>
  </div>
  <div
    className="links "
  >
    <span
      className="linkItem"
    >
      <a
        href="/timesheets"
        onClick={[Function]}
      >
        Timesheets
      </a>
    </span>
    <span
      className="linkItem"
    >
      <a
        href="/expenses"
        onClick={[Function]}
      >
        Expenses
      </a>
    </span>
    <span
      className="linkItem"
    >
      <a
        href="/management"
        onClick={[Function]}
      >
        Management
      </a>
      <span
        className="activeLine"
      />
    </span>
  </div>
  <div
    className="right"
  >
    <img
      alt=""
      className="alert"
      src=""
    />
    <div
      className="profile"
    >
      <img
        alt=""
        className="avatar"
        src=""
      />
      <div
        className="info"
      >
        <p
          className="name"
        >
          Adam Fisherman
        </p>
        <p
          className="level"
        >
           Administrator
        </p>
      </div>
      <button
        className="arrow"
        type="button"
      >
        Open Profile
      </button>
    </div>
  </div>
</nav>
`;

exports[`Storyshots NavigationBar Timesheets 1`] = `
<nav
  className="wrapper"
>
  <div
    className="toggler"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      onClick={[Function]}
      viewBox="0 0 24 24"
    >
      <path
        d="M4 18h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zm0-5h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1z"
      />
    </svg>
  </div>
  <div
    className="links "
  >
    <span
      className="linkItem"
    >
      <a
        href="/timesheets"
        onClick={[Function]}
      >
        Timesheets
      </a>
      <span
        className="activeLine"
      />
    </span>
    <span
      className="linkItem"
    >
      <a
        href="/expenses"
        onClick={[Function]}
      >
        Expenses
      </a>
    </span>
    <span
      className="linkItem"
    >
      <a
        href="/management"
        onClick={[Function]}
      >
        Management
      </a>
    </span>
  </div>
  <div
    className="right"
  >
    <img
      alt=""
      className="alert"
      src=""
    />
    <div
      className="profile"
    >
      <img
        alt=""
        className="avatar"
        src=""
      />
      <div
        className="info"
      >
        <p
          className="name"
        >
          Adam Fisherman
        </p>
        <p
          className="level"
        >
           Administrator
        </p>
      </div>
      <button
        className="arrow"
        type="button"
      >
        Open Profile
      </button>
    </div>
  </div>
</nav>
`;
